--- a/Shopify App/View/Base.lproj/Main.storyboard
+++ b/Shopify App/View/Base.lproj/Main.storyboard
@@ -20,6 +20,9 @@
         <array key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
         </array>
+        <array key="TimesNewRoman.ttf">
+            <string>.SFUI-Semibold</string>
+        </array>
     </customFonts>
     <scenes>
         <!--SplashVC-->
@@ -143,14 +146,15 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                         <items>
                                             <barButtonItem title="Item" image="heart" catalog="system" width="73.333335876464844" id="NbZ-e1-YS2"/>
                                             <barButtonItem style="plain" id="0NH-bW-2Nu">
-                                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="gIk-Tr-fXR">
+                                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="gIk-Tr-fXR">
                                                     <rect key="frame" x="73.333333333333314" y="5" width="272" height="34"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                                     <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="ADD TO BAG" cornerStyle="large">
+                                                    <buttonConfiguration key="configuration" style="filled" title="ADD TO BAG" cornerStyle="capsule">
                                                         <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
                                                         <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
+                                                        <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <color key="baseBackgroundColor" name="mainColor"/>
                                                     </buttonConfiguration>
                                                     <connections>
                                                         <action selector="addToCart:" destination="DdB-S0-7HZ" eventType="touchUpInside" id="lGv-HB-8BE"/>
@@ -729,10 +733,10 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 <rect key="frame" x="14.666666666666657" y="393.66666666666669" width="363.66666666666674" height="133.66666666666669"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSz-eW-dQN">
-                                        <rect key="frame" x="0.0" y="0.0" width="363.66666666666669" height="52.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="363.66666666666669" height="65"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="631-Q3-qks">
-                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="36.666666666666664"/>
+                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="49"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                             </textField>
@@ -747,10 +751,10 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="woq-GJ-OIP">
-                                        <rect key="frame" x="0.0" y="68.666666666666629" width="363.66666666666669" height="65"/>
+                                        <rect key="frame" x="0.0" y="81" width="363.66666666666669" height="52.666666666666657"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SYN-x6-7nS">
-                                                <rect key="frame" x="8" y="7.9999999999999432" width="347.66666666666669" height="49"/>
+                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="36.666666666666664"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
@@ -1597,7 +1601,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="xy1-Ja-cZO">
                     <connections>
-                        <segue destination="lHL-Vu-lwo" kind="show" id="llD-1h-zSi"/>
+                        <segue destination="lHL-Vu-lwo" kind="show" id="OIO-wh-dJc"/>
                     </connections>
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="PlO-ZN-HPq">
@@ -1616,22 +1620,32 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="y90-S1-s6y">
-                                <rect key="frame" x="40" y="79" width="313" height="292"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="y90-S1-s6y">
+                                <rect key="frame" x="15" y="159" width="363" height="394"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <string key="text">Ali Mostafa 
+alimoustafa7070@gmail.com
+
+Zienab Hussien 
+zienabh08@gmail.com
+ Sohila Ahmed 
+sohilaahmed668@gmail.com
+
+Abdullah Mohamed 
+Abdullah.moahmed99@gmail.com
+</string>
                                 <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XJB-pV-VQp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="y90-S1-s6y" firstAttribute="top" secondItem="XJB-pV-VQp" secondAttribute="top" constant="20" id="5FE-Ab-4WN"/>
-                            <constraint firstItem="y90-S1-s6y" firstAttribute="leading" secondItem="XJB-pV-VQp" secondAttribute="leading" constant="40" id="OOK-9j-4IF"/>
-                            <constraint firstItem="XJB-pV-VQp" firstAttribute="bottom" secondItem="y90-S1-s6y" secondAttribute="bottom" constant="412" id="S6Z-nT-hdf"/>
-                            <constraint firstItem="XJB-pV-VQp" firstAttribute="trailing" secondItem="y90-S1-s6y" secondAttribute="trailing" constant="40" id="p00-s3-jpi"/>
+                            <constraint firstItem="XJB-pV-VQp" firstAttribute="bottom" secondItem="y90-S1-s6y" secondAttribute="bottom" constant="230" id="2l2-zP-d1C"/>
+                            <constraint firstItem="y90-S1-s6y" firstAttribute="top" secondItem="XJB-pV-VQp" secondAttribute="top" constant="100" id="87j-DG-whp"/>
+                            <constraint firstItem="y90-S1-s6y" firstAttribute="leading" secondItem="XJB-pV-VQp" secondAttribute="leading" constant="15" id="Gwf-I2-uag"/>
+                            <constraint firstItem="XJB-pV-VQp" firstAttribute="trailing" secondItem="y90-S1-s6y" secondAttribute="trailing" constant="15" id="oJJ-eS-viS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="V12-h8-ki5"/>
@@ -1649,11 +1663,14 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="clip" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HEd-gr-yDO">
-                                <rect key="frame" x="20" y="109" width="353" height="81.333333333333314"/>
-                                <string key="text">This our final project in iT 3-Month track iOS mobile application development
+                                <rect key="frame" x="20" y="159" width="353" height="155.33333333333337"/>
+                                <string key="text">We are iti student in track iOS 4-Month intake 43 This is our final project.
 Our Team:
-</string>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+Ali Mostafa
+Zienab Hussien
+Sohila Ahmed
+Abdullah Mohamed</string>
+                                <fontDescription key="fontDescription" name=".SFUI-Semibold" family=".AppleSystemUIFont" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1661,7 +1678,7 @@ Our Team:
                         <viewLayoutGuide key="safeArea" id="KJY-hh-ls1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="HEd-gr-yDO" firstAttribute="top" secondItem="KJY-hh-ls1" secondAttribute="top" constant="50" id="MOw-eX-U32"/>
+                            <constraint firstItem="HEd-gr-yDO" firstAttribute="top" secondItem="KJY-hh-ls1" secondAttribute="top" constant="100" id="3wO-VJ-bwK"/>
                             <constraint firstItem="KJY-hh-ls1" firstAttribute="trailing" secondItem="HEd-gr-yDO" secondAttribute="trailing" constant="20" id="hMt-2Q-9Pm"/>
                             <constraint firstItem="HEd-gr-yDO" firstAttribute="leading" secondItem="KJY-hh-ls1" secondAttribute="leading" constant="20" id="yDK-ZF-u7j"/>
                         </constraints>
@@ -2132,9 +2149,6 @@ Our Team:
         </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
