--- a/Shopify App/Modules/Product/View/ProductCell/ProductOFBrandCollectionViewCell.xib
+++ b/Shopify App/Modules/Product/View/ProductCell/ProductOFBrandCollectionViewCell.xib
@@ -80,8 +80,9 @@
                                     <constraint firstAttribute="width" constant="40" id="g2h-AI-NAC"/>
                                     <constraint firstAttribute="height" constant="40" id="vap-BD-zQf"/>
                                 </constraints>
+                                <color key="tintColor" red="0.85882352939999995" green="0.18823529410000001" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="favoriteRed"/>
+                                <state key="normal" image="heart" catalog="system"/>
                                 <connections>
                                     <action selector="didPressedOnFavBtn:" destination="gTV-IL-0wX" eventType="touchUpInside" id="ZJ3-dQ-2zd"/>
                                 </connections>
@@ -121,7 +122,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="favoriteRed" width="40" height="40"/>
+        <image name="heart" catalog="system" width="128" height="107"/>
         <image name="shoes" width="612" height="408"/>
         <image name="stars 1" width="109.66666412353516" height="23.333333969116211"/>
         <systemColor name="systemBackgroundColor">
