--- a/Shopify App/Modules/Address/AddressCell/AddressTVCell.xib
+++ b/Shopify App/Modules/Address/AddressCell/AddressTVCell.xib
@@ -18,6 +18,7 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Egypt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LBl-id-41k">
                         <rect key="frame" x="10" y="15" width="349" height="55"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
